[project]
name = "kv-cache-gateway"
version = "1.0.0"
description = "传输层 KV Cache 优化系统:在客户端 SDK 与 API 网关之间引入前缀缓存协商层,透明节省 OpenAI Chat Completions 上行带宽。"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "架构组" }]
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "tiktoken>=0.7",
    "uvicorn>=0.27",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tail"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
