[project]
name = "tail"
version = "2.1.0"
description = "Tail — Send the tail, the head is cached. 传输层 KV Cache 优化:openai SDK monkey patch + OpenResty/Kvrocks 网关,透明节省 LLM 上行带宽。"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "lloydzhou" }]
license = { text = "MIT" }
dependencies = [
    "openai>=1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "redis>=5.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tail"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
